--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,18 @@
-%h2 Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .actions
-    = f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+#newPasswordModal.modal.show{"aria-hidden" => "true", :role => "dialog", :tabindex => "-1"}
+  .modal-dialog
+    .modal-content
+      .modal-header
+        %h1.text-center Forgot your password?
+      .modal-body
+        = form_for(resource, as: resource_name, url: password_path(resource_name),
+                                                html: { method: :post },
+                                                class: "form col-md-12 center-block") do |f|
+          = devise_error_messages!
+          .form-group
+            = f.email_field :email, placeholder: "User Email", class: "form-control input-lg", autofocus: true
+          .form-group
+            = f.submit "Send me reset password instructions", class: "btn btn-primary btn-lg btn-block"
+            %span.pull-right
+              -# add here login via fb
+            %span
+              = render "devise/shared/links"
