--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,23 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+#signupModal.modal.show{"aria-hidden" => "true", :role => "dialog", :tabindex => "-1"}
+  .modal-dialog
+    .modal-content
+      .modal-header
+        %h1.text-center Sign up
+      .modal-body
+        = render "layouts/flash_message"
+        = form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form col-md-12 center-block") do |f|
+          .form-group
+            = f.email_field :email, placeholder: "User Email", class: "form-control input-lg", autofocus: true
+          - if @minimum_password_length
+            %em
+              (#{@minimum_password_length} characters minimum)
+          .form-group
+            = f.password_field :password, placeholder: "Password", class: "form-control input-lg", autocomplete: "off"
+          .form-group
+            = f.password_field :password_confirmation, placeholder: "Password", class: "form-control input-lg", autocomplete: "off"
+          .form-group
+            = f.submit "Sign up", class: "btn btn-primary btn-lg btn-block"
+            %span.pull-right
+              -# add here login via fb
+            %span
+              = render "devise/shared/links"
