--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -12,7 +12,8 @@
             = f.email_field :email, placeholder: "User Email", class: "form-control input-lg", autofocus: true
           .form-group
             = f.submit "Send me reset password instructions", class: "btn btn-primary btn-lg btn-block"
-            %span.pull-right
-              -# add here login via fb
-            %span
-              = render "devise/shared/links"
+            .row
+              .col-sm-7
+                = render "devise/shared/links"
+              .col-sm-5
+                = render "devise/shared/social_links"
