--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -17,7 +17,8 @@
             = f.password_field :password_confirmation, placeholder: "Password", class: "form-control input-lg", autocomplete: "off"
           .form-group
             = f.submit "Sign up", class: "btn btn-primary btn-lg btn-block"
-            %span.pull-right
-              -# add here login via fb
-            %span
-              = render "devise/shared/links"
+            .row
+              .col-sm-7
+                = render "devise/shared/links"
+              .col-sm-5
+                = render "devise/shared/social_links"
