--- a/app/assets/stylesheets/devise.css.sass
+++ b/app/assets/stylesheets/devise.css.sass
@@ -11,3 +11,8 @@
   color: #fff
   background-color: #337ab7
   border-color: rgba(0,0,0,0.2)
+
+.alert-notice
+  color: #31708f
+  background-color: #d9edf7
+  border-color: #bce8f1
