--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,19 +1,26 @@
-%h2 Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  = f.hidden_field :reset_password_token
-  .field
-    = f.label :password, "New password"
-    %br/
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-      %br/
-    = f.password_field :password, autofocus: true, autocomplete: "off"
-  .field
-    = f.label :password_confirmation, "Confirm new password"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Change my password"
-= render "devise/shared/links"
+#editPasswordModal.modal.show{"aria-hidden" => "true", :role => "dialog", :tabindex => "-1"}
+  .modal-dialog
+    .modal-content
+      .modal-header
+        %h1.text-center Change your password
+      .modal-body
+        = form_for(resource, as: resource_name, url: password_path(resource_name),
+                                                html: { method: :put },
+                                                class: "form col-md-12 center-block") do |f|
+          = devise_error_messages!
+          = f.hidden_field :reset_password_token
+          .form-group
+            - if @minimum_password_length
+              %em
+                (#{@minimum_password_length} characters minimum)
+              %br/
+            = f.password_field :password, placeholder: "New password", class: "form-control input-lg", autocomplete: "off"
+          .form-group
+            = f.password_field :password_confirmation, placeholder: "Password", class: "form-control input-lg", autocomplete: "off"
+          .form-group
+            = f.submit "Change my password", class: "btn btn-primary btn-lg btn-block"
+            .row
+              .col-sm-7
+                = render "devise/shared/links"
+              .col-sm-5
+                = render "devise/shared/social_links"
