--- a/app/views/layouts/_flash_message.html.haml
+++ b/app/views/layouts/_flash_message.html.haml
@@ -1,6 +1,7 @@
 #flash_message
   - if flash.count > 0
-    .center.alert.fade.in.alert-danger
-      %button.close{ "data-dismiss" => "alert" }×
-      - flash.each do |name, msg|
+    - flash.each do |name, msg|
+      %div{ class: "center alert fade in alert-#{ name }" }
+        %button.close{ "data-dismiss" => "alert" }×
         = content_tag :div, msg, id: "flash_#{name}"
+
