fixed css notice

--- a/app/assets/stylesheets/devise.css.sass
+++ b/app/assets/stylesheets/devise.css.sass
@@ -16,3 +16,9 @@
   color: #31708f
   background-color: #d9edf7
   border-color: #bce8f1
+
+.alert-alert
+  color: #a94442
+  background-color: #f2dede
+  border-color: #ebccd1
+
