--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title TodoList
+    = include_gon
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
   %body{ body_attributes }
