added ability to create/update/delete projects
added eco gem for rendering templates from coffeescript

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,5 +17,6 @@
           = content_tag :div, msg, id: "flash_#{name}"
       = yield
   = javascript_include_tag 'application'
+  = yield :overlay
 
 
