refactoring: Project form and Task form will be loaded in common modal window

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -9,13 +9,13 @@
 .col-md-12
   %br
     %center
-      = link_to new_project_path, data: { :'remote-target' => '#projects-form .modal-content' },
-                                  class: 'open-project-js btn btn-primary',
+      = link_to new_project_path, data: { :'remote-target' => '#modals-form .modal-content' },
+                                  class: 'open-modal-js btn btn-primary',
                                   title: "New" do
         = image_tag 'plus_blue.png'
         &nbsp;
         %strong= "Add TODO List"
 
 = content_for :overlay do
-  = render "overlays/projects/form"
+  = render "overlays/modals/form"
 
