--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -1,7 +1,7 @@
 = content_tag_for :div, project, class: 'project-item' do
-  %span.project_name= project.name
+  %span.project-name= project.name
   = link_to project_path(project, format: :json), class: "project_action delete-project-js" do
     .glyphicon.glyphicon-remove
-  = link_to edit_project_path(project.id), data: { :'remote-target' => '#projects-form .modal-content' }, class: 'open-project-js project_action', title: 'Edit' do
+  = link_to edit_project_path(project.id), data: { :'remote-target' => '#modals-form .modal-content' }, class: 'open-modal-js project_action', title: 'Edit' do
     .glyphicon.glyphicon-pencil
 
