--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,4 +1,8 @@
-%p Hello world!
+.col-md-12
+  .text-center.text-uppercase
+    %h1= "simple todo lists"
+    .lead= 'designed by ruby garage'
+
 .col-md-12
   .projects-list
     - if @projects.blank?
