--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -5,3 +5,61 @@ body
   -moz-background-size: cover
   -o-background-size: cover
   background-size: cover
+
+.separator
+  color: rgb(152, 176, 210)
+  margin: 0px 2px
+
+.todo-list
+  margin: 20px 0px
+
+.list-header
+  min-height: 45px
+  vertical-align: middle
+  padding: 11px 12px
+  font-size: 16px
+  text-decoration: none
+  display: inline-block
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3)
+  color: #FFFFFF
+  cursor: pointer
+
+  border-top-color: #5185AC
+  border-right-color: #2164A8
+  border-bottom-color: #0D5794
+  border-left-color: #2164A8
+  border-width: 0px
+  border-style: solid
+  -webkit-border-radius: 1px
+  -moz-border-radius: 1px
+  border-radius: 1px
+  background-color: #3384B6
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3384B6), to(#125FA5))
+  background-image: -webkit-linear-gradient(top, #3384B6, #125FA5)
+  background-image: -moz-linear-gradient(top, #3384B6, #125FA5)
+  background-image: -ms-linear-gradient(top, #3384B6, #125FA5)
+  background-image: -o-linear-gradient(top, #3384B6, #125FA5)
+  background-image: linear-gradient(to bottom, #3384B6, #125FA5)
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#3384B6, endColorstr=#125FA5)
+
+.create-task
+  border-top-color: #D5D6DA
+  border-right-color: #C8C4BB
+  border-bottom-color: #B8B8B8
+  border-left-color: #C8C4BB
+  border-width: 1px
+  border-style: solid
+  -webkit-border-radius: 0px
+  -moz-border-radius: 0px
+  border-radius: 0px
+  background-color: #DEDEEA
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#DEDEEA), to(#CECECE))
+  background-image: -webkit-linear-gradient(top, #DEDEEA, #CECECE)
+  background-image: -moz-linear-gradient(top, #DEDEEA, #CECECE)
+  background-image: -ms-linear-gradient(top, #DEDEEA, #CECECE)
+  background-image: -o-linear-gradient(top, #DEDEEA, #CECECE)
+  background-image: linear-gradient(to bottom, #DEDEEA, #CECECE)
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#DEDEEA, endColorstr=#CECECE)
+
+  .green-plus-icon
+    margin: 11px
