--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require jquery-ui/sortable
+ *= require bootstrap-datepicker3
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
