--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -62,4 +62,74 @@ body
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#DEDEEA, endColorstr=#CECECE)
 
   .green-plus-icon
-    margin: 11px
+    padding: 11px 0px
+
+a.green-button
+  padding: 6px 26px
+  color: #FFFFFF
+  border-top-color: #497E6A
+  border-right-color: #3B9474
+  border-bottom-color: #147C59
+  border-left-color: #629282
+  border-width: 1px
+  border-style: solid
+  background-color: #79CEAF
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#79CEAF), to(#168D65))
+  background-image: -webkit-linear-gradient(top, #79CEAF, #168D65)
+  background-image: -moz-linear-gradient(top, #79CEAF, #168D65)
+  background-image: -ms-linear-gradient(top, #79CEAF, #168D65)
+  background-image: -o-linear-gradient(top, #79CEAF, #168D65)
+  background-image: linear-gradient(to bottom, #79CEAF, #168D65)
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#79CEAF, endColorstr=#168D65)
+
+.tasks-list
+  background-color: #FFFFFF
+  //border: 1px solid #7d99ca
+  -webkit-border-radius: 0px 0px 12px 12px
+  -moz-border-radius: 0px 0px 12px 12px
+  border-radius: 0px 0px 12px 12px
+
+  border-top-color: rgba(193, 193, 193, 0.7) //#C1C1C1
+  border-right-color: rgba(226, 226, 226, 0.7) //#E4C5A9
+  border-bottom-color: rgba(128, 128, 128, .5) //#C58500
+  border-left-color: rgba(226, 226, 226, 0.5) //#F2C492
+  border-width: 0px 0px 1px 1px
+  border-style: solid
+
+  //-webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75)
+  //-moz-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75)
+  //box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.75)
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 0px
+  -moz-box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 0px
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 0px
+
+.col-md-9.task-name
+  padding: 11px 0px 11px 10px
+  margin-left: 3px
+  width: 84.333%
+  color: #999999
+  border-left-color: rgba(226, 226, 226, 0.7)
+  border-right-color: rgba(226, 226, 226, 0.7)
+  border-width: 0px 1px 0px 1px
+  border-style: solid
+
+.col-md-1.task-done
+  padding: 11px 0px 11px 17px
+  border-right-color: rgba(226, 226, 226, 0.7)
+  border-width: 0px 1px 0px 0px
+  border-style: solid
+
+.task-item
+  border-width: 1px 0px 0px 0px
+  border-style: solid
+  border-top-color: rgba(226, 226, 226, 0.7)
+
+.col-md-2.task-actions
+  padding: 11px 0px 11px 21px
+
+.move
+  cursor: pointer
+
+.separator-grey
+  color: #eaeaea
+  margin: 0px 6px
