--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -4,7 +4,7 @@
     = @project.new_record? ? 'New' : 'Edit'
     %span.semi-bold Project
 
-= form_for @project, html: { class: 'form-horizontal' } do |f|
+= form_for @project, html: { class: 'form-horizontal project_form' } do |f|
   .modal-body
     #error_explanation
     .form-group
