--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -21,10 +21,21 @@
     .col-md-2
     .col-md-8.create-task
       .row
-        .span1
+        .col-md-1{style: "width: 5%"}
           = image_tag "plus_green.png", class: "green-plus-icon"
-        .span9
-        .span2
-
+        .col-md-11{style: "width: 95%"}
+          .form-group{style: "margin: 4px 0px;"}
+            .input-group.input-group-md
+              %input#create_task_name.form-control{ placeholder: "Start typing here to create a task...", :type => "text"}/
+              %span.input-group-btn
+                = link_to "Add Task", new_project_task_path(project), data: { :'remote-target' => '#modals-form .modal-content' },
+                                                     class: 'open-modal-js btn green-button',
+                                                     title: "New"
     .col-md-2
+  - unless project.tasks.empty?
+    .row
+      .col-md-2
+      .col-md-8.tasks-list#sortable{ "data-update-url" => sort_project_tasks_url(project) }
+        = render partial: "tasks/task", collection: project.tasks.order(:prioritize)
+      .col-md-2
 
