added highlight on sortable task

--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -124,6 +124,9 @@ a.green-button
   border-style: solid
   border-top-color: rgba(226, 226, 226, 0.7)
 
+.highlight
+  background-color: #fbfdd5 //#c0dcef
+
 .col-md-2.task-actions
   padding: 11px 0px 11px 21px
 
