added highlite task on hover
added ability to update field 'mark_as_done' using checkboxes in task lists

--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -124,7 +124,7 @@ a.green-button
   border-style: solid
   border-top-color: rgba(226, 226, 226, 0.7)
 
-.highlight
+.highlight, .task:hover
   background-color: #fbfdd5 //#c0dcef
 
 .col-md-2.task-actions
