Added Attachment model and ability to add/delete attachments with comment
added carrierwave and jquery-fileupload-rails gems

--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -139,3 +139,9 @@ a.green-button
 
 .comments-list
   margin-left: 40px
+
+.progress-animated
+  .bar
+    height: 5px
+    background-color: rgb(81, 190, 7)
+
