--- a/app/views/layouts/_flash_message.html.haml
+++ b/app/views/layouts/_flash_message.html.haml
@@ -1,7 +1,6 @@
 #flash_message
-  - if flash.count > 0
-    - flash.each do |name, msg|
-      %div{ class: "center alert fade in alert-#{ name }" }
-        %button.close{ "data-dismiss" => "alert" }×
-        = content_tag :div, msg, id: "flash_#{name}"
+  - flash.to_a.each do |name, msg|
+    %div{ class: "center alert fade in alert-#{ name }" }
+      %button.close{ "data-dismiss" => "alert" }×
+      = content_tag :div, msg, id: "flash_#{name}"
 
